styles/scss/queerie.scss
/* IMPORT */

@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);

@import url(https://fonts.googleapis.com/css?family=Oswald:400,700);




/* VARIABLES */

$gqTransparent: rgba(0,0,0,0);
$gqCopyShadow: rgba(0,0,0,0.004);
$gqTopMenuBG: rgba(0,0,0,0.65);
$gqWhite: #ffffff;
$gqBlue: #041a5f;
$gqOrange: #cb7817;
$gqDarkOrange: #b56b14;
$gqBrown: #523f2f;
$gqBlack: #202020;
$gqBeige: #f8e6a4;
$gqYellow: #f5d751;
$gqRed: #e52319;

$headerHeight: 500px;
$menuHeight: 68px;
$logoHeight: $headerHeight - ($menuHeight * 2);
$footerHeight: 194px;
$primaryMargin: 40px;
$footerLogoWidth: 200px;
$footerLogoSpacing: 50px;
$aboutBoxHeight: 100px;
$aboutBoxWidth: 310px;

$breakSmall: 860px;
$smLogoBreak: 980px;
$breakBig: 1200px;




/* MIXINS */

@mixin initZero {
  border: 0;
  margin: 0;
  padding: 0;
}

@mixin fontCopy {
  font-family: 'Open Sans', Arial, sans-serif;
  -webkit-font-smoothing: antialiased !important;
  text-shadow: 1px 1px 1px $gqCopyShadow;
}

@mixin fontTitle {
  font-family: 'Oswald', Arial, sans-serif;
  -webkit-font-smoothing: antialiased !important;
  text-shadow: 1px 1px 1px $gqCopyShadow;
}

@mixin linearGradient($top, $bottom){
    background: $top; /* Old browsers */
    background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
    background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#000000',GradientType=0 ); /* IE6-9 */
}

@mixin menuImage {
  height: $menuHeight;
  width: auto;
  padding: 0 10px;
  margin: 0 10px;
}

@mixin menuButton($thisImage, $thisWidth) {
  display: inline-block;
  height: $menuHeight;
  width: $thisWidth;
  padding: 0 10px;
  margin: 0 10px;
  background-size: $thisWidth;
  background-image: url($thisImage);
  background-repeat: no-repeat;
  background-position: bottom;
  &:hover {
    background-position: top;
  }
}

@mixin linkNormal {
  //
}

@mixin linkHover {
  //
}

@mixin fullWidth {
  // Enable background of element to extend to full-width
  // Not suitable for monitors the size of the moon
  margin-left: -9999px;
  margin-right: -9999px;
  padding-left: 9999px;
  padding-right: 9999px;
}

@mixin widgetReset {
  list-style-type: none;
}

@mixin homeTitle {
  @include fontTitle;
  width: 200px;
  font-size: 24px;
  color: $gqBlue;
  text-align: right;
  vertical-align: top;
  margin-bottom: 20px;

  @media screen and (max-width: $breakSmall) {
    text-align: left;
  }
}

@mixin homeTitleAndContent {
  display: inline-block;

  @media screen and (max-width: $breakSmall) {
    display: block;
  }
}

@mixin homeContent {
  width: 400px;
  padding-left: 30px;
  text-align: left;

  @media screen and (max-width: $breakSmall) {
    width: auto;
  }
}

@mixin bigOrangeButton {
  padding: 10px 20px;
  margin-bottom: 20px;
  background-color: $gqOrange;
  color: $gqWhite;

  &:hover {
    background-color: $gqYellow;
  }
}




/* STYLES */

a, a:link {
  color: $gqOrange;
  text-decoration: none;
  cursor: pointer;
}
a:hover {
  color: $gqYellow;
}

img.alignright {
  float: right;
  margin: 0 0 18px 18px;
}
img.alignleft {
  float: left;
  margin: 0 18px 18px 0;
}
img.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto;
}
a img.alignright {
  float: right;
  margin: 0 0 18px 18px;
}
a img.alignleft {
  float: left;
  margin: 0 18px 18px 0;
}
a img.aligncenter {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

h1, h2, h3, h4 {
  @include fontTitle;
}

h1 {
  font-size: 30px;
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 18px;
}

h4 {
  font-size: 14px;
}

blockquote {
  background-color: rgba(0,0,0,0.04);
  padding: 10px 20px;
}

.clearfix {
  clear: both;
}

a.big-orange-button {
  @include bigOrangeButton;
}

html, body {
  height: 100%;
  overflow-x: hidden;
}

body {
  @include initZero;
  @include fontCopy;
  background-color: $gqWhite;
}

#wrapper {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0;
  overflow-x: hidden;
}

#content {
  @media screen and (min-width: $breakBig) {
    max-width: $breakBig;
    margin: 0 auto 0 auto;
  }
}

#header {
  position:relative;
  height: $headerHeight;
  background-color: $gqBrown;
  text-align: center;
  overflow-y: hidden;
  background-image: url("../../images/background.jpg");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: contain;

  @media screen and (max-width: $breakSmall) {
    background-size: $breakSmall;
  }

  img.main-logo {
    height: $logoHeight;
    width: auto;
  }
}
/* ... */

